# ml

./: .gitignore  .gitmodules  .tasks  CMakeLists.txt  README.md  cmake  test.cpp
.clangd/index/: catch.hpp.29953549B45049F1.idx  impl_details.hpp.41B726310F8A8C2F.idx  main.cpp.3B3D64EC7F537427.idx  matrix.hpp.6CB999FEC1E0F729.idx  matrix_impl.hpp.A5822AF54A394922.idx  operations.hpp.74B364704BD824A0.idx  prev_imple_details.hpp.F8FD014B15102AA1.idx  regor.cpp.C5894BE54B93D918.idx  regression.hpp.B24CF77881FD9202.idx  test.cpp.0E026CF5A72B32CF.idx  test.cpp.1E82B578795E426E.idx  test_matrix.cpp.EA4476B4BB3C0541.idx  test_matrix_view.cpp.E76A15152CAF9516.idx  test_opr.cpp.33771706127A5352.idx  test_vector.cpp.45EB59CE809FBE8B.idx  vector.hpp.8B260A1C4CC1535B.idx  vector_impl.hpp.95115A9F8624B297.idx
classification/: logistic.hpp  logistic_reg.cpp
regression/: regor.cpp  regression.hpp
src/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  impl_details.hpp  matrix.hpp  matrix_impl.hpp  operations.hpp  vector.hpp  vector_impl.hpp
test/: test_matrix.cpp  test_matrix_view.cpp  test_opr.cpp  test_vector.cpp  test_vector_view.cpp
